Move WIP test improvements to this branch